--- a/Nailhang.Web/Nailhang.Web.csproj
+++ b/Nailhang.Web/Nailhang.Web.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DependencyItem.cs" />
     <Compile Include="Models\DisplaySettings.cs" />
     <Compile Include="Models\IndexModel.cs" />
     <Compile Include="Models\ModuleModel.cs" />
