--- a/Nailhang.Processing/Nailhang.Processing.csproj
+++ b/Nailhang.Processing/Nailhang.Processing.csproj
@@ -61,6 +61,9 @@
     <Compile Include="CecilModule.cs" />
     <Compile Include="CecilProcessor.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="ModuleBuilder\Base\IModuleBuilder.cs" />
+    <Compile Include="ModuleBuilder\NailhangModuleBuilder.cs" />
+    <Compile Include="ModuleBuilder\NamespaceGroupedBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
