--- a/Nailhang.IndexBase/Nailhang.IndexBase.csproj
+++ b/Nailhang.IndexBase/Nailhang.IndexBase.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ModuleObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\IModulesStorage.cs" />
+    <Compile Include="TypeReference.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nailhang\Nailhang.csproj">
