--- a/Nailhang.IndexBase/Nailhang.IndexBase.csproj
+++ b/Nailhang.IndexBase/Nailhang.IndexBase.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.cs" />
     <Compile Include="Index\IIndexProcessor.cs" />
     <Compile Include="InterfaceMethod.cs" />
     <Compile Include="Module.cs" />
