--- a/Nailhang.Web/Nailhang.Web.csproj
+++ b/Nailhang.Web/Nailhang.Web.csproj
@@ -159,6 +159,7 @@
     <None Include="Properties\PublishProfiles\FilePublish.pubxml" />
     <None Include="Properties\PublishProfiles\folder.pubxml" />
     <None Include="Properties\PublishProfiles\fspublish.pubxml" />
+    <None Include="Properties\PublishProfiles\to32.pubxml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
