--- a/Nailhang.Web/project.json
+++ b/Nailhang.Web/project.json
@@ -27,6 +27,7 @@
   },
 
   "tools": {
+    "BundlerMinifier.Core": "2.2.281",
     "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
   },
@@ -46,7 +47,8 @@
   },
 
   "runtimes": {
-    "win10-x64": {}
+    "win10-x64": {},
+    "ubuntu.16.04-x64": {}
   },
 
   "runtimeOptions": {
