--- a/Nailhang.IndexBase/project.json
+++ b/Nailhang.IndexBase/project.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "version": "1.0.0-*",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.0",
-    "Nailhang":  "1.0.0-*"
+    "Nailhang": "1.0.0-*",
+    "NETStandard.Library": "1.6.1"
   },
 
   "frameworks": {
