--- a/Nailhang.Tool/project.json
+++ b/Nailhang.Tool/project.json
@@ -5,14 +5,11 @@
   },
 
   "dependencies": {
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.1"
-    },
     "Ninject": "4.0.0-beta-0134",
     "Nailhang.Mongodb": "1.0.0-*",
     "Nailhang.IndexBase": "1.0.0-*",
-    "Nailhang.Processing": "1.0.0-*"
+    "Nailhang.Processing": "1.0.0-*",
+    "Microsoft.NETCore.App": "1.1.0"
   },
 
   "frameworks": {
