--- a/Nailhang.MVoxLease/Nailhang.MVoxLease.csproj
+++ b/Nailhang.MVoxLease/Nailhang.MVoxLease.csproj
@@ -3,6 +3,7 @@
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <AssemblyName>Nailhang.MVoxLease</AssemblyName>
     <PackageId>Nailhang.MVoxLease</PackageId>
+    <NoWarn>NU1605</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
