--- a/Nailhang.Processing/Nailhang.Processing.csproj
+++ b/Nailhang.Processing/Nailhang.Processing.csproj
@@ -4,6 +4,7 @@
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <AssemblyName>Nailhang.Processing</AssemblyName>
     <PackageId>Nailhang.Processing</PackageId>
+    <NoWarn>NU1605</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
