--- a/Nailhang.Svn/appsettings.json
+++ b/Nailhang.Svn/appsettings.json
@@ -1,3 +1,10 @@
 ﻿{
-  "codePage": 1251
+  "codePage": 1251,
+  "Mongo": {
+    "DbName": "nailhang",
+    "ConnectionString": "mongodb://192.168.0.32"
+  },
+  "repositories": [
+    "https://192.168.0.4:8443/svn/dev3"
+  ]
 }
