--- a/Nailhang.Svn/Nailhang.Svn.csproj
+++ b/Nailhang.Svn/Nailhang.Svn.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <StartupObject>Nailhang.Svn.Program</StartupObject>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
