--- a/Nailhang.Svn/appsettings.json
+++ b/Nailhang.Svn/appsettings.json
@@ -4,6 +4,7 @@
     "DbName": "nailhang",
     "ConnectionString": "mongodb://192.168.0.32"
   },
+  "pollingPeriodSeconds" : 600,
   "repositories": [
     "https://192.168.0.4:8443/svn/dev3"
   ]
