--- a/Nailhang.Svn/Nailhang.Svn.csproj
+++ b/Nailhang.Svn/Nailhang.Svn.csproj
@@ -8,19 +8,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.*" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.*" />    
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.1" />
     <PackageReference Include="Ninject" Version="3.3.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.4.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.0.*" />    
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Orleans.Core" Version="2.0.0" />
+
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Nailhang.IndexBase\Nailhang.IndexBase.csproj" />
     <ProjectReference Include="..\Nailhang.Mongodb\Nailhang.Mongodb.csproj" />
+    <ProjectReference Include="..\Nailhang.Services.Interfaces\Nailhang.Services.Interfaces.csproj" />
   </ItemGroup>
 
   <ItemGroup>
