--- a/Nailhang.Silo/nailhang_silo.service
+++ b/Nailhang.Silo/nailhang_silo.service
@@ -3,7 +3,7 @@
 
     [Service]
     WorkingDirectory=/home/arkhivania/dev/netass/NetAssScanner/Nailhang.Silo/bin/Release/netcoreapp2.0/publish/
-    ExecStart=/usr/bin/dotnet /home/arkhivania/dev/netass/NetAssScanner/Nailhang.Silo/bin/Release/netcoreapp2.0/publish/Nailhang.Silo.dll
+    ExecStart=/usr/bin/dotnet /home/arkhivania/dev/netass/NetAssScanner/Nailhang.Silo/bin/Release/netcoreapp2.0/publish/Nailhang.Silo.dll /service
     Restart=always
     RestartSec=10                                          
     SyslogIdentifier=nailhang_silo_service
