--- a/Nailhang.Web/appsettings.json
+++ b/Nailhang.Web/appsettings.json
@@ -1,4 +1,6 @@
 ﻿{
+  "MongoConnectionString": "mongodb://192.168.0.32/nh_modules",
+  "ClusterID": "nailhang_dev",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
