move to 2.1 and some stat
move to 2.1 and some stat

--- a/prod_appsettings.json
+++ b/prod_appsettings.json
@@ -5,6 +5,7 @@
   "codePage": 1251,
   "pollingPeriodSeconds": 600,
   "repositories": ["https://192.168.0.4:8443/svn/dev3"],
+  "StatHotDaysCount": 5,
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
