--- a/Nailhang.Silo/appsettings.json
+++ b/Nailhang.Silo/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "MongoConnectionString": "mongodb://192.168.0.32/nh_modules",
   "ClusterID": "nailhang_dev",
-  "IPAddress": "192.168.0.125"
+  "IPAddress": "192.168.0.125",
+  "StatHotDaysCount": 5
 }
