--- a/Nailhang.Blazor/appsettings.json
+++ b/Nailhang.Blazor/appsettings.json
@@ -10,5 +10,8 @@
     "DbName": "nailhang",
     "ConnectionString": "mongodb://192.168.0.32"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "general": {
+    "wwwRoot": "/nailhang"
+  }
 }
