небольшой текстовый поиск

--- a/Nailhang.Display/Nailhang.Display.csproj
+++ b/Nailhang.Display/Nailhang.Display.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Tools\Text\**" />
+    <EmbeddedResource Remove="Tools\Text\**" />
+    <None Remove="Tools\Text\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Nailhang.IndexBase\Nailhang.IndexBase.csproj" />
   </ItemGroup>
 
