--- a/Nailhang.Display/Nailhang.Display.csproj
+++ b/Nailhang.Display/Nailhang.Display.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ninject" Version="3.3.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Nailhang.IndexBase\Nailhang.IndexBase.csproj" />
   </ItemGroup>
 
