более окмпактное хранение в памяти имён классов

--- a/Nailhang.TestLauncher/Nailhang.TestLauncher.csproj
+++ b/Nailhang.TestLauncher/Nailhang.TestLauncher.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Nailhang.Display\Nailhang.Display.csproj" />
     <ProjectReference Include="..\Nailhang.IntegrationTests\Nailhang.IntegrationTests.csproj" />
   </ItemGroup>
 
