--- a/Nailhang.TestLauncher/Properties/launchSettings.json
+++ b/Nailhang.TestLauncher/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Nailhang.TestLauncher": {
       "commandName": "Project",
-      "commandLineArgs": "Nailhang.IntegrationTests.dll --wait"
+      "commandLineArgs": "Nailhang.Display.dll"
     }
   }
 }
