--- a/Nailhang.Display/Nailhang.Display.csproj
+++ b/Nailhang.Display/Nailhang.Display.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ninject" Version="3.3.4" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
   </ItemGroup>
 
   <ItemGroup>
